--- a/tests.html
+++ b/tests.html
@@ -9,7 +9,9 @@
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
         <script src="http://code.jquery.com/qunit/qunit-1.13.0.js"></script>
+        <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
         <script src="just.js"></script>
         <script src="propertyTests.js"></script>
+        <script src="bindingsTests.js"></script>
     </body>
 </html>
