--- a/tests.html
+++ b/tests.html
@@ -3,13 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>QUnit Example</title>
-        <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.13.0.css">
+        <link rel="stylesheet" href="qunit-1.13.0.css">
     </head>
     <body>
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
-        <script src="http://code.jquery.com/qunit/qunit-1.13.0.js"></script>
-        <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
+        <script src="qunit-1.13.0.js"></script>
         <script src="just.js"></script>
         <script src="propertyTests.js"></script>
         <script src="bindingsTests.js"></script>
