--- a/tests.html
+++ b/tests.html
@@ -2,14 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>QUnit Example</title>
+        <title>JogaJS Tests</title>
         <link rel="stylesheet" href="qunit-1.13.0.css">
     </head>
     <body>
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
         <script src="qunit-1.13.0.js"></script>
-        <script src="just.js"></script>
+        <script src="joga.js"></script>
         <script src="propertyTests.js"></script>
         <script src="bindingsTests.js"></script>
     </body>
