--- a/tests.html
+++ b/tests.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>joga.js tests</title>
+        <title>joga tests</title>
         <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.14.0.css">
     </head>
     <body>
