--- a/tests.html
+++ b/tests.html
@@ -9,8 +9,13 @@
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
         <script src="http://code.jquery.com/qunit/qunit-1.14.0.js"></script>
-        <script src="joga.js"></script>
+        
+        <script data-main="tests" src="require.js"></script>
+        
+        <!--
+        <script src="../joga.js"></script>
         <script src="propertyTests.js"></script>
         <script src="bindingsTests.js"></script>
+        -->
     </body>
 </html>
