Make data-do bind to each model

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
         <title>joga</title>
     </head>
     <body>
-        <a href="tests/tests.html">Tests</a>
+        <a href="tests.html">Tests</a>
     </body>
 </html>
