Get requirejs from cdnjs

--- a/tests.html
+++ b/tests.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8">
         <title>joga tests</title>
-        <link rel="stylesheet" href="http://code.jquery.com/qunit/qunit-1.14.0.css">
+        <link rel="stylesheet" href="//code.jquery.com/qunit/qunit-1.14.0.css">
     </head>
     <body>
         <div id="qunit"></div>
         <div id="qunit-fixture"></div>
-        <script src="http://code.jquery.com/qunit/qunit-1.14.0.js"></script>
+        <script src="//code.jquery.com/qunit/qunit-1.14.0.js"></script>
         
-        <script data-main="joga" src="http://requirejs.org/docs/release/2.1.11/minified/require.js"></script>
+        <script data-main="joga" src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.11/require.js"></script>
         
         <script src="tests/arrayPropertyTests.js"></script>
         <script src="tests/bindingsTests.js"></script>
