Add Property suffix to properties in joga package object

--- a/tests/index.html
+++ b/tests/index.html
@@ -13,9 +13,9 @@
         <script data-main="../joga" src="require.js"></script>
         
         <script src="arrayPropertyTests.js"></script>
-        <script src="bindingsTests.js"></script>
         <script src="booleanPropertyTests.js"></script>
         <script src="computedPropertyTests.js"></script>
+        <script src="elementPropertyTests.js"></script>
         <script src="objectPropertyTests.js"></script>
         <script src="stringPropertyTests.js"></script>
         
