Move binding tests to their own separate files

--- a/tests/index.html
+++ b/tests/index.html
@@ -18,6 +18,8 @@
         <script src="elementPropertyTests.js"></script>
         <script src="objectPropertyTests.js"></script>
         <script src="stringPropertyTests.js"></script>
+        <script src="bindings/ElementBindingTests.js"></script>
+        <script src="bindings/HTMLInputElementBindingTests.js"></script>
         
     </body>
 </html>
