--- a/tests/index.html
+++ b/tests/index.html
@@ -10,7 +10,7 @@
         <div id="qunit-fixture"></div>
         <script src="qunit-1.14.0.js"></script>
         
-        <script data-main="../joga" src="require.js"></script>
+        <script data-main="../src/joga" src="require.js"></script>
         
         <script src="arrayPropertyTests.js"></script>
         <script src="booleanPropertyTests.js"></script>
